--- a/style.css
+++ b/style.css
@@ -773,13 +773,13 @@ address {
   width: -moz-max-content;
   border-radius: 6px;
   font-size: 14px;
-  background-color: rgba(59, 72, 80, 0.9);
+  background-color: #333;
   background-image: linear-gradient(30deg,
     rgba(59, 72, 80, 0.44),
     rgba(59, 68, 75, 0.44),
     rgba(60, 82, 88, 0.44));
-  box-shadow: 0px 0px 24px rgba(0, 0, 0, 0.2);
-  color: #fff;
+  box-shadow: 0px 0px 24px #7952b385;
+  color: var(--white);
   text-align: center;
   white-space: pre-wrap;
   transform: translate(-50%, -5px) scale(0.5);
